@@ -51,6 +51,10 @@ public class HiddenSingleHint extends DirectHint implements Rule {
         return getName() + ": " + super.toString();
     }
 
+    public String toString2() {
+        return getName() + ": " + super.toString();
+    }
+
     @Override
     public String toHtml() {
         String result;
